fixes cause of repo items overflowing their width

--- a/src/Repository/style.css
+++ b/src/Repository/style.css
@@ -19,7 +19,7 @@
 }
 
 .RepositoryItem-title-items {
-  width: 172px;
+  width: 192px;
   margin: 10px auto;
 }
 
